Add mails for insiders

--- a/app/views/mailers/notifications_mailer/eligible_for_insiders.text.haml
+++ b/app/views/mailers/notifications_mailer/eligible_for_insiders.text.haml
@@ -1,20 +1,21 @@
-Hey there,
+Hey!
 \
-Welcome to Exercism! We're excited to have you as a part of our community and looking forward to helping you as you go even deeper on your programming journey.
+I'm excited to let you know you're eligible for Exercism Insiders - our rewards program for people who contribute, mentor, or donate to Exercism.
+You can activate your Insiders account on the Insiders Page: #{insiders_url}
 \
-Exercism is designed to be help you develop a deep understanding of whichever language you choose to learn. We're a registered not-for-profit organisation and 100% free.
+Insiders gives you three main benefits:
+1. Exercism Premium for free. You now have access to Dark Mode, ChatGPT Integration, extra mentoring slots and more.
+2. Behind the scenes content. You can watch videos from me and the team, keeping you in the loop, as we work on Exercism.
+3. Closer access to the team and key community members, with our dedicated #insiders Discord channel.
 \
-I put this video together (which you might have seen when you signed up) which walks you through a few key things: https://www.youtube.com/watch?v=8rmbTWAncb8
+The Insiders Page contains lots more detail!
+Your Insiders status will continue for as long as you're actively contributing, mentoring or donating.
+You can also earn a Lifetime Insiders status by hitting certain thresholds.
 \
-If you ever get stuck or have questions, don't hesitate to post in our forum. Our community is friendly and supportive, and we're always happy to help. We believe that learning is a collaborative effort and that we can all learn from each other.
-\
-Finally, don't miss out on our YouTube channel where we share interesting interviews, walkthroughs, and tutorials about Exercism. You might find some tips and tricks that will make your learning journey even more enjoyable.
-\
-Have a great day!
+Thanks so much for being part of Exercism's story. I really hope you enjoy Insiders!
 \
 Jeremy Walker
 Exercism's Co-founder &amp; CEO
 \
-\---
-\
-Visit Exercism: #{root_url}
+Activate Insiders: #{insiders_url}
+
