--- a/app/views/mailers/notifications_mailer/eligible_for_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/eligible_for_insiders.html.haml
@@ -1,35 +1,30 @@
-%p Hey there,
+%p Hey!
 
 %p
-  Welcome to #{link_to 'Exercism', 'https://exercism.org'}!
-  We're excited to have you as a part of our community and looking forward to helping you as you go even deeper on your programming journey.
-
+  I'm excited to let you know you're eligible for Exercism Insiders - our rewards program for people who contribute, mentor, or donate to Exercism.
+  You can activate your Insiders account on the #{link_to 'Insiders Page', insiders_url}.
 
 %p
-  Exercism is designed to be help you develop a deep understanding of whichever language you choose to learn.
-  We're a registered not-for-profit organisation and 100% free.
+  Insiders gives you three main benefits:
+%ol
+  %li Exercism Premium for free. You now have access to Dark Mode, ChatGPT Integration, extra mentoring slots and more.
+  %li Behind the scenes content. You can watch videos from me and the team, keeping you in the loop, as we work on Exercism.
+  %li Closer access to the team and key community members, with our dedicated #insiders Discord channel.
 
-%p I put this video together (which you might have seen when you signed up) which walks you through a few key things 👇
+%p
+  Your Insiders status will continue for as long as you're actively contributing, mentoring or donating.
+  You can also earn a Lifetime Insiders status by hitting certain thresholds.
+  The #{link_to 'Insiders Page', insiders_url} contains lots more detail or watch the video below to learn more 👇
 
 %p{ style: "margin-bottom: 24px" }
-  %a{ href: "https://www.youtube.com/watch?v=8rmbTWAncb8", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
-    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-onboarding-welcome-with-play-icon.jpg", style: "width:100%; display:block" }
+  %a{ href: "https://www.youtube.com/watch?v=iwhahd41h0A", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
+    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/introducing-insiders-with-play-icon.jpg", style: "width:100%; display:block" }
 
-%p
-  If you ever get stuck or have questions, don't hesitate to post in #{link_to 'our forum', 'https://forum.exercism.org'}.
-  Our community is friendly and supportive, and we're always happy to help.
-  We believe that learning is a collaborative effort and that we can all learn from each other.
-
-%p
-  Finally, don't miss out on our #{link_to 'YouTube channel', 'https://www.youtube.com/@Exercism_org'} where we share interesting interviews, walkthroughs, and tutorials about Exercism.
-  You might find some tips and tricks that will make your learning journey even more enjoyable.
-
-%p Have a great day!
+%p Thanks so much for being part of Exercism's story. I really hope you enjoy Insiders!
 
 %p
   Jeremy Walker
   %br
   Exercism's Co-founder &amp; CEO
 
-= email_button_to 'Visit Exercism', root_url
-
+= email_button_to 'Activate Insiders', insiders_url
