--- a/app/views/mailers/notifications_mailer/joined_lifetime_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/joined_lifetime_insiders.html.haml
@@ -10,8 +10,8 @@
   To learn about what's in Insiders, please check out the dedicated page, or watch our introductory vlog below 👇
 
 %p{ style: "margin-bottom: 24px" }
-  %a{ href: "https://www.youtube.com/watch?v=WDUqfCMbh_8", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
-    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-insiders-1-with-play-icon.jpg", style: "width:100%; display:block" }
+  %a{ href: "https://www.youtube.com/watch?v=zomfphsDQrs", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
+    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/welcome-to-insiders-with-play-icon.jpg", style: "width:100%; display:block" }
 
 %p
   I'd love to hear all your thoughts and ideas on our dedicated #{link_to '#insiders channel on Discord', 'https://discord.com/channels/854117591135027261/1103737555490447460'}. So come along and say hello!
