--- a/app/views/premium/_features_inside.html.haml
+++ b/app/views/premium/_features_inside.html.haml
@@ -40,7 +40,7 @@
     %p
       You should also have a new very exclusive badge (or two!). Check your
       = link_to "My Journey", badges_journey_path
-      badge to reveal them. There are also new extra hidden badges for you to unlock
+      badges to reveal them. There are also new extra hidden badges for you to unlock
       as you solve exercises.
 
   .feature
