--- a/app/views/dashboard/_mentoring_completed.html.haml
+++ b/app/views/dashboard/_mentoring_completed.html.haml
@@ -1,4 +1,4 @@
-%section.zero-section
+%section.c-zero-section
   = graphical_icon "person-celebrating", category: :graphics
 
   %h3 No mentoring discussions left
