--- a/app/css/components/nav-bar.css
+++ b/app/css/components/nav-bar.css
@@ -224,39 +224,8 @@
         }
     }
 
-    section.tracks-zero-section {
-        .track-icons {
-            @apply relative flex mb-20;
-
-            .c-track-icon {
-                height: 64px;
-                width: 64px;
-                margin-left: -18px;
-            }
-        }
-    }
-
-    section.zero-section {
-        @apply flex flex-col items-center;
-        @apply rounded-8 py-28 px-24;
-        @apply text-center;
-        @apply mb-24;
-
-        .c-icon {
-            width: 96px;
-            height: 96px;
-            @apply mb-16;
-        }
-        h3 {
-            @apply text-h5 mb-8;
-        }
-        p {
-            @apply text-p-base;
-            @apply text-textColor6;
-        }
-        p + * {
-            @apply mt-20;
-        }
+    section.c-zero-section {
+        @apply shadow-none;
     }
 
     #journey-view {
