--- a/app/views/dashboard/_mentoring_zero.html.haml
+++ b/app/views/dashboard/_mentoring_zero.html.haml
@@ -1,8 +1,8 @@
-%section.mentoring-zero-section.zero-section
+%section.mentoring-zero-section.c-zero-section
   = graphical_icon "mentoring", category: :graphics
 
   %h3 Become a mentor
-  %p Mentoring is a great way to reinforce your own learning, and help students learn and discover the things they don’t know. 
+  %p Mentoring is a great way to reinforce your own learning, and help students learn and discover the things they don&apos;t know.
 
   .grid.grid-cols-2.gap-20
     = link_to "Try mentoring now", mentoring_path, class: 'btn-primary btn-s'
