Add zero tracks section view (#5501)
* Add zero tracks section view

* Dry things up a bit

--- a/app/css/components/nav-bar.css
+++ b/app/css/components/nav-bar.css
@@ -224,6 +224,10 @@
         }
     }
 
+    section.c-zero-section {
+        @apply shadow-none;
+    }
+
     #journey-view {
         @apply absolute overflow-hidden;
         @apply flex justify-end;
