--- a/app/views/mailers/notifications_mailer/joined_premium.html.haml
+++ b/app/views/mailers/notifications_mailer/joined_premium.html.haml
@@ -1,20 +1,28 @@
 %p Hey!
 
 %p
-  Welcome to #{link_to 'Exercism Insiders', 'https://exercism.org/insiders'}!
-  Thank you for part of our story and helping making Exercism the huge success that it is. Insiders is a small way of us saying thank you for your support.
+  Welcome to #{link_to 'Exercism Premium', 'https://exercism.org/premium'}!
+  Thanks for upgrading! We really hope you enjoy the new features and functionality you've unlocked.
 
 %p
-  To learn about what's in Insiders, please check out the dedicated page, or watch our introductory vlog below 👇
+  We've created Premium as a way of keping the core Exercism product
+  free for everyone. By upgrading to Premium, not only have you unlocked
+  new features and functionality, you've also helped an open-source,
+  not-for-profit organisation that's determined to make access to
+  education more equal. So thank you so much for supporting us! 💙
+
+%p
+  To get started with Premium, watch the welcome video below or explore the various features and functionality
+  on the #{link_to 'Premium Page', 'https://exercism.org/premium'}.
 
 %p{ style: "margin-bottom: 24px" }
-  %a{ href: "https://www.youtube.com/watch?v=WDUqfCMbh_8", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
-    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-insiders-1-with-play-icon.jpg", style: "width:100%; display:block" }
+  %a{ href: "https://www.youtube.com/watch?v=V8Ey6HNIY6U", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
+    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/welcome-to-premium-with-play-icon.jpg", style: "width:100%; display:block" }
 
 %p
-  I'd love to hear all your thoughts and ideas on our dedicated #{link_to '#insiders channel on Discord', 'https://discord.com/channels/854117591135027261/1103737555490447460'}. So come along and say hello!
+  I'd love to hear all your thoughts and ideas on how we can expand Premium, so please do post any thoughts on the forum!
 
-%p Thanks for being part of our journey. I'm excited for what comes next 🙂
+%p Have fun!
 
 %p
   Jeremy Walker
