--- a/app/views/mailers/notifications_mailer/joined_premium.text.haml
+++ b/app/views/mailers/notifications_mailer/joined_premium.text.haml
@@ -1,16 +1,17 @@
 Hey!
 \
-Welcome to Exercism Insiders (https://exercism.org/insiders)!
-Thank you for part of our story and helping making Exercism the huge success that it is. Insiders is a small way of us saying thank you for your support.
+Welcome to Exercism Premium!
+Thanks for upgrading! We really hope you enjoy the new features and functionality you've unlocked.
 \
-To learn about what's in Insiders, please check out the dedicated page, or watch our introductory vlog: https://www.youtube.com/watch?v=WDUqfCMbh_8
-
-I'd love to hear all your thoughts and ideas on our dedicated #insiders channel on Discord (https://discord.com/channels/854117591135027261/1103737555490447460). So come along and say hello!
+We've created Premium as a way of keping the core Exercism product free for everyone.
+By upgrading to Premium, not only have you unlocked new features and functionality, you've also helped an open-source, not-for-profit organisation that's determined to make access to education more equal.
+So thank you so much for supporting us! 💙
 \
-Thanks for being part of our journey. I'm excited for what comes next 🙂
+To get started with Premium, explore the various features and functionality on the Premium Page: https://exercism.org/premium
+\
+I'd love to hear all your thoughts and ideas on how we can expand Premium, so please do post any thoughts on the forum!
+\
+Have fun!
 \
 Jeremy Walker
-
-Exercism Co-founder & CEO
-\
-Visit Exercism: #{root_url}
+Exercism's Co-founder &amp; CEO
