--- a/app/views/mailers/notifications_mailer/expired_premium.text.haml
+++ b/app/views/mailers/notifications_mailer/expired_premium.text.haml
@@ -1,20 +1,10 @@
-Hey there,
+\Hey,
 \
-Welcome to Exercism! We're excited to have you as a part of our community and looking forward to helping you as you go even deeper on your programming journey.
+Your Exercism Premium subscription has now expired.
 \
-Exercism is designed to be help you develop a deep understanding of whichever language you choose to learn. We're a registered not-for-profit organisation and 100% free.
-\
-I put this video together (which you might have seen when you signed up) which walks you through a few key things: https://www.youtube.com/watch?v=8rmbTWAncb8
-\
-If you ever get stuck or have questions, don't hesitate to post in our forum. Our community is friendly and supportive, and we're always happy to help. We believe that learning is a collaborative effort and that we can all learn from each other.
-\
-Finally, don't miss out on our YouTube channel where we share interesting interviews, walkthroughs, and tutorials about Exercism. You might find some tips and tricks that will make your learning journey even more enjoyable.
+Thank you for trying Premium. I hope you enjoyed it. If you have any ideas or thoughts on how we could make it better, please do let me know. And if you'd like to rejoin Premium, you can do so at any time.
 \
 Have a great day!
 \
 Jeremy Walker
 Exercism's Co-founder &amp; CEO
-\
-\---
-\
-Visit Exercism: #{root_url}
