--- a/app/views/mailers/premium_mailer/payment_created.text.haml
+++ b/app/views/mailers/premium_mailer/payment_created.text.haml
@@ -1,8 +1,7 @@
 Hi #{@user.handle},
 \
-Thank you for your donation! Exercism exists to bring the joy of programming to everyone, everywhere. Your donation helps make everything we do possible.
+Thank you for your Premium Payment! As well as giving you some fun benefits, your payment also keeps the core Exercism product free for everyone. So thank you.
 \
-You can see all the donations you've made to Exercism in your Settings page and download any receipts from there: #{donations_settings_url}
+You can see all the payments you've made to Exercism, and download your receipts, in your Settings page. If you have any questions about your payment, please reply to this email.
 \
-Thank you again!
-
+We hope you enjoy Premium!
