--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -21,7 +21,7 @@
       #anchor-donate
       .summary.lg-container.hidden.md:flex.items-center
         .item
-          .value= number_with_delimiter(User::Data.donor.count)
+          .value= number_with_delimiter(User::Data.donors.count)
           .metric Supporters
 
         .item
