--- a/app/views/mailers/notifications_mailer/expired_premium.html.haml
+++ b/app/views/mailers/notifications_mailer/expired_premium.html.haml
@@ -4,7 +4,7 @@
   Your #{link_to 'Exercism Premium', 'https://exercism.org/premium'} subscription has now expired.
 
 %p
-Thank you for trying Premium. I hope you enjoyed it. If you have any ideas or thoughts on how we could make it better, please do let me know. And if you'd like to rejoin Premium, you can do so at any time.
+Thank you for trying Premium. I hope you enjoyed it. If you have any ideas or thoughts on how we could make it better, please let us know on the forum. And if you'd like to rejoin Premium, you can do so at any time.
 
 %p Have a great day!
 
