--- a/app/views/mailers/notifications_mailer/joined_lifetime_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/joined_lifetime_insiders.html.haml
@@ -2,12 +2,12 @@
 
 %p
   Welcome to #{link_to 'Exercism Insiders', 'https://exercism.org/insiders'}!
-  Thank you for part of our story and helping making Exercism the huge success that it is.
+  Thank you for being part of our story and helping making Exercism the huge success that it is.
   As a Lifetime Insider, you're one of the few people who have had a huge impact on the platform and shaped it into what it is today. You've helped thousands of people and made a huge difference - thank you.
   Insiders is a tiny way of us saying thank you for all you've done.
 
 %p
-  To learn about what's in Insiders, please check out the dedicated page, or watch our introductory vlog below 👇
+  To learn about what's in Insiders, please check out the dedicated page, or watch our introductory video below 👇
 
 %p{ style: "margin-bottom: 24px" }
   %a{ href: "https://www.youtube.com/watch?v=zomfphsDQrs", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
