--- a/app/views/mailers/notifications_mailer/joined_premium.html.haml
+++ b/app/views/mailers/notifications_mailer/joined_premium.html.haml
@@ -5,7 +5,7 @@
   Thanks for upgrading! We really hope you enjoy the new features and functionality you've unlocked.
 
 %p
-  We've created Premium as a way of keping the core Exercism product
+  We've created Premium as a way of keeping the core Exercism product
   free for everyone. By upgrading to Premium, not only have you unlocked
   new features and functionality, you've also helped an open-source,
   not-for-profit organisation that's determined to make access to
