--- a/app/views/mailers/notifications_mailer/upgraded_to_lifetime_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/upgraded_to_lifetime_insiders.html.haml
@@ -1,12 +1,12 @@
 %p Hey!
 
 %p
-  I wanted to let you know that you've been updated to Lifetime membership of #{link_to 'Exercism Insiders', 'https://exercism.org/insiders'}!
+  I'm excited to let you know that you've been upgraded to Lifetime membership of #{link_to 'Exercism Insiders', 'https://exercism.org/insiders'}!
 %p
   As a Lifetime Insider, you're one of the few people who have had a huge impact on the platform and shaped it into what it is today. You've helped thousands of people and made a huge difference - thank you.
   Insiders is a tiny way of us saying thank you for all you've done.
 
-%p Congratulations on passing the Lifetime threshold and thanks again for being part of Exercism 🙂
+%p Congratulations on reaching the Lifetime threshold and thanks again for being part of Exercism 🙂
 
 %p
   Jeremy Walker
