--- a/app/views/mailers/notifications_mailer/joined_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/joined_insiders.html.haml
@@ -2,10 +2,10 @@
 
 %p
   Welcome to #{link_to 'Exercism Insiders', 'https://exercism.org/insiders'}!
-  Thank you for part of our story and helping making Exercism the huge success that it is. Insiders is a small way of us saying thank you for your support.
+  Thank you for being part of our story and helping making Exercism the huge success that it is. Insiders is a small way of us saying thank you for your support.
 
 %p
-  To learn about what's in Insiders, please check out the #{link_to 'Insiders Page', 'https://exercism.org/insiders'}, or watch our introductory vlog below 👇
+  To learn about what's in Insiders, please check out the #{link_to 'Insiders Page', 'https://exercism.org/insiders'}, or watch our introductory video below 👇
 
 %p{ style: "margin-bottom: 24px" }
   %a{ href: "https://www.youtube.com/watch?v=zomfphsDQrs", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
