--- a/app/views/mailers/notifications_mailer/joined_lifetime_insiders.text.haml
+++ b/app/views/mailers/notifications_mailer/joined_lifetime_insiders.text.haml
@@ -1,7 +1,7 @@
 Hey!
 \
 Welcome to Exercism Insiders (https://exercism.org/insiders)!
-Thank you for part of our story and helping making Exercism the huge success that it is. Insiders is a small way of us saying thank you for your support.
+Thank you for being part of our story and helping making Exercism the huge success that it is. Insiders is a small way of us saying thank you for your support.
 \
 To learn about what's in Insiders, please check out the dedicated page, or watch our introductory vlog: https://www.youtube.com/watch?v=WDUqfCMbh_8
 
