--- a/app/views/mailers/notifications_mailer/joined_premium.text.haml
+++ b/app/views/mailers/notifications_mailer/joined_premium.text.haml
@@ -3,7 +3,7 @@ Hey!
 Welcome to Exercism Premium!
 Thanks for upgrading! We really hope you enjoy the new features and functionality you've unlocked.
 \
-We've created Premium as a way of keping the core Exercism product free for everyone.
+We've created Premium as a way of keeping the core Exercism product free for everyone.
 By upgrading to Premium, not only have you unlocked new features and functionality, you've also helped an open-source, not-for-profit organisation that's determined to make access to education more equal.
 So thank you so much for supporting us! 💙
 \
