Fix gradient issues on premium page

--- a/app/views/premium/external.html.haml
+++ b/app/views/premium/external.html.haml
@@ -1,5 +1,5 @@
 #page-premium
-  .gradient-container.top
+  .gradient-container.top.pt-20.md:pt-48.pb-64
     .lg-container
       .grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
         .top-lhs.flex.flex-col
