--- a/app/views/premium/show.html.haml
+++ b/app/views/premium/show.html.haml
@@ -1,6 +1,6 @@
 #page-premium
   = render ReactComponents::Modals::WelcomeToPremiumModal.new
-  .gradient-container.pb-64
+  .gradient-container.top.pt-20.md:pt-48.pb-64
     .lg-container
       .top.grid.grid-cols-1.md:grid-cols-2.gap-48
         .top-lhs
