Highlight elements on iteration view change, make hover bg span the entire row, fix types

--- a/app/css/components/code-pane.css
+++ b/app/css/components/code-pane.css
@@ -5,7 +5,7 @@
         @apply flex;
         @apply py-8;
         ul {
-            @apply w-fill;
+            width: fit-content;
         }
         & li {
             @apply flex;
