--- a/app/views/layouts/nav/challenge_12in23.html.haml
+++ b/app/views/layouts/nav/challenge_12in23.html.haml
@@ -4,8 +4,8 @@
   %p.text-p-base.font-semibold.mb-8
     Try out 12 different programming languages in 2023, curated and guided by us!
   %p.text-p-base.mb-16
-    This month is Mindshifting May,
-    exploring languages that make you think differently: Ballerina, Pharo, Prolog, Red, Tcl and Unison.
+    This month is the Summer of Sexps,
+    exploring languages that are Lisp dialects: Clojure, Common Lisp, Emacs Lisp, Racket and Scheme.
 
   = link_to "Explore #12in23", challenge_path("12in23"), class: 'btn-primary btn-s mb-12'
 
