--- a/app/css/components/code-pane.css
+++ b/app/css/components/code-pane.css
@@ -1,23 +1,27 @@
 .c-code-pane {
-    @apply overflow-auto;
+    @apply overflow-auto flex;
 
-    & code {
+    .--tab-panel {
+        @apply flex-grow;
+    }
+
+    code {
         @apply flex;
         @apply py-8;
         ul {
             @apply w-fill;
         }
-        & li {
+        li {
             @apply flex;
             @apply text-15 font-mono leading-huge;
 
-            & .idx {
+            .idx {
                 @apply flex-shrink-0;
                 @apply text-center text-textColor6;
                 @apply select-none;
                 width: 64px;
             }
-            & .loc {
+            .loc {
                 @apply flex-grow;
                 @apply pr-24;
             }
