Update current challenge to Summer of Sexps (#5488)
* Add June exercises to featured exercises progress

* Update current challenge to Summer of Sexps

* Apply suggestions from code review

Co-authored-by: Christian Willner <34183939+vaeng@users.noreply.github.com>

* Fix month

* Fix more places

* Add LFE (sorry!)

* Add correct video url

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>
Co-authored-by: Christian Willner <34183939+vaeng@users.noreply.github.com>

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -89,10 +89,10 @@
         .flex.flex-col.items-start.mb-28
           .text-adaptivePurple.font-semibold.leading-150.flex.items-center.mb-4
             %span.emoji.mr-6 📆
-            Month 5 of #12in23
-          %h2.text-h3 It's Mindshifting May!
+            Month 6 of #12in23
+          %h2.text-h3 It's the Summer of Sexps!
           %p.text-p-base.mb-6
-            This month we're exploring languages that will get you thinking differently - Ballerina, Pharo, Red, TCL, Unison and Prolog!
+            This month we're exploring languages that are Lisp dialects: Clojure, Common Lisp, Emacs Lisp, Racket and Scheme!
             Have fun expanding your mind!
           = link_to challenge_path('12in23'), class: "btn btn-primary btn-base" do
             %span Explore #12in23
