Fix concept map

--- a/app/css/components/track/concept-map.css
+++ b/app/css/components/track/concept-map.css
@@ -1,7 +1,4 @@
-.c-concepts-map {
-    --c-concept-map-background: var(--backgroundColorA);
-    --c-concept-map-card-background: var(--backgroundColorA);
-
+:root {
     --c-concept-map-line-dasharray-dashed: 12, 5;
     --c-concept-map-line-dasharray-solid: 1, 0;
     --c-concept-map-text-unlocked: #26282d;
@@ -12,6 +9,12 @@
     --c-concept-map-line-width: 2;
     --c-concept-map-circle-radius: 3;
     --c-concept-map-drawing-margin: 50;
+}
+
+.c-concepts-map {
+    --c-concept-map-background: var(--backgroundColorA);
+    --c-concept-map-card-background: var(--backgroundColorA);
+
     min-width: 300px;
     margin-top: -40px; /* Compensate for the first row of cards */
 
