--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -78,8 +78,8 @@
           %ul.text-p-large.list-disc.pl-16
             %li.mb-4
               Help us compile the
-              = link_to "definitive list of great resources", "https://forum.exercism.org/t/the-definitive-guide-to-learning-data-science-languages/4955"
-              for learning and mastering data science languages in our dedicated forum thread.
+              = link_to "definitive list of great resources", "https://forum.exercism.org/t/the-definitive-guide-to-learning-lispy-languages-those-with-s-expressions/5907"
+              for learning and mastering lispy-languages in our dedicated forum thread.
             %li.mb-4
               Join in the conversation by using the
               #{link_to '#12in23 tag on our forums', 'https://forum.exercism.org/tag/12in23'},
