Change opacity of bg

--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -554,9 +554,9 @@ body.namespace-.controller-premium.theme-light,
     --hljs-hue-6: #d19a66;
     --hljs-hue-6-2: #e6c07b;
 
-    --diffDarkGreen: #4fcda7;
+    --diffDarkGreen: #4fcda726;
     --diffLightGreen: #4fcda726;
-    --diffDarkRed: #f17070;
+    --diffDarkRed: #f1707026;
     --diffLightRed: #f1707026;
 
     --commonBadge-RGB: 240, 243, 249;
