Add progress text green color dark variant

--- a/app/css/pages/concept-show.css
+++ b/app/css/pages/concept-show.css
@@ -46,7 +46,8 @@
                 @apply mb-12;
 
                 &.completed {
-                    @apply text-darkSuccessGreen font-semibold;
+                    @apply font-semibold;
+                    color: var(--textColorProgressTextCompleted);
                     & .c-icon {
                         @apply block;
                     }
