Replace purples on docs, and nav background

--- a/app/css/components/docs-side-nav.css
+++ b/app/css/components/docs-side-nav.css
@@ -36,7 +36,7 @@
             }
             &.selected {
                 & a {
-                    @apply text-anotherPurple font-semibold;
+                    @apply text-adaptivePurple font-semibold;
                 }
             }
         }
