--- a/app/css/components/docs-main-nav.css
+++ b/app/css/components/docs-main-nav.css
@@ -1,7 +1,7 @@
 @import "../styles";
 
 .c-docs-nav {
-    @apply bg-backgroundColorE;
+    @apply bg-backgroundColorA;
     @apply pt-12;
 
     & .container {
@@ -36,15 +36,15 @@
             }
         }
         &.selected {
-            @apply border-anotherPurple;
+            @apply border-adaptivePurple;
 
             & a {
-                @apply text-anotherPurple;
+                @apply text-adaptivePurple;
             }
         }
         &.api {
             & a {
-                @apply text-anotherPurple font-semibold;
+                @apply text-adaptivePurple font-semibold;
             }
         }
     }
