--- a/app/css/pages/docs-index.css
+++ b/app/css/pages/docs-index.css
@@ -47,24 +47,57 @@
             @apply py-32;
             width: 50%;
             @apply overflow-hidden relative;
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg'%3e%3crect width='105%25' height='105%25' fill='none' stroke='%23C8D5EF' stroke-width='3' stroke-dasharray='16%2c16' stroke-dashoffset='4' stroke-linecap='round'/%3e%3c/svg%3e");
+            --strokeColor: var(--borderColorDocsDashed);
+            --dashWeight: 1px;
+            --dashLength: 20px;
+            --gapPlusDashLength: 41px;
+            --hiddenDash: transparent, transparent var(--dashLength),
+                transparent var(--dashLength),
+                transparent var(--gapPlusDashLength),
+                transparent var(--gapPlusDashLength);
+            --visibleDash: var(--strokeColor),
+                var(--strokeColor) var(--dashLength),
+                transparent var(--dashLength),
+                transparent var(--gapPlusDashLength),
+                var(--strokeColor) var(--gapPlusDashLength);
+            --left: 0deg;
+            --top: 90deg;
+            --right: 180deg;
+            --bottom: 270deg;
 
-            &:nth-child(odd) {
-                @apply pr-40;
-                padding-left: 3px;
-
-                &:before {
-                    content: "";
-                    @apply absolute;
-                    @apply bg-backgroundColorA;
-                    top: 0;
-                    left: 0;
-                    bottom: 0;
-                    width: 3px;
-                }
+            background-size: var(--dashWeight) 100%, 100% var(--dashWeight),
+                var(--dashWeight) 100%, 100% var(--dashWeight);
+            background-position: 0 0, 0 0, 100% 0, 0 100%;
+            background-repeat: no-repeat;
+            &:nth-child(1) {
+                @apply pr-32;
+                background-image: repeating-linear-gradient(
+                        var(--left),
+                        var(--hiddenDash)
+                    ),
+                    repeating-linear-gradient(var(--top), var(--hiddenDash)),
+                    repeating-linear-gradient(var(--right), var(--visibleDash)),
+                    repeating-linear-gradient(var(--bottom), var(--visibleDash));
             }
-            &:nth-child(even) {
-                @apply pl-40;
+            &:nth-child(2) {
+                @apply pl-32;
+                background-image: repeating-linear-gradient(
+                        var(--left),
+                        var(--hiddenDash)
+                    ),
+                    repeating-linear-gradient(var(--top), var(--hiddenDash)),
+                    repeating-linear-gradient(var(--right), var(--hiddenDash)),
+                    repeating-linear-gradient(var(--bottom), var(--visibleDash));
+            }
+            &:nth-child(3) {
+                @apply pr-32;
+                background-image: repeating-linear-gradient(
+                        var(--left),
+                        var(--hiddenDash)
+                    ),
+                    repeating-linear-gradient(var(--top), var(--hiddenDash)),
+                    repeating-linear-gradient(var(--right), var(--visibleDash)),
+                    repeating-linear-gradient(var(--bottom), var(--hiddenDash));
             }
 
             & .c-icon.header-icon {
