--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -232,6 +232,7 @@
     --borderColorContributionTasksTag: theme(colors.veryLightBlue2);
     --borderColorContributorCreditBlock: theme(colors.lavender);
     --borderColorExerciseStatusTagInProgress: theme(colors.lightBlue);
+    --borderColorDocsDashed: theme(colors.lavender);
     --borderColorTracksListV3: var(--textColor2);
     /* textColor1 and textColor2 has different dark-themes */
     --textColor1: var(--c-130B43);
@@ -488,6 +489,7 @@ body.namespace-.controller-premium.theme-light,
     --borderColorContributionTasksTag: theme(colors.gray);
     --borderColorContributorCreditBlock: theme(colors.gray);
     --borderColorExerciseStatusTagInProgress: theme(colors.purpleDarkened);
+    --borderColorDocsDashed: theme(colors.aliceBlue);
     --borderColorTracksListV3: transparent;
     /* --borderColor7: var(--c-533F56); */
     --textColor1: #f0f3f9;
